# nano_jax_inr

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  dataloader.py  evaluation.py  gpu-requirements.txt  main.py  model.py  pyproject.toml  requirements.txt  tpu-requirements.txt  train.py  utils.py
scripts/: attach-carrot.bash  attach.bash  gpu-install.sh  install.sh
